Added functionality to signup login page. Changed models and services to reflect changes in database

--- a/src/app/components/preference-form/preference-form.component.html
+++ b/src/app/components/preference-form/preference-form.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <h2 style="margin-bottom: 40px;">Preference</h2>
+  <h2 style="margin-bottom: 40px; text-align: center;">Preference</h2>
   <form class="example-form" (submit)="onSubmitPrefer(preferForm)" #preferForm="ngForm">    
     
     <!-- E-mail, FirstName, LastName, City, State, 
