--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,32 +6,47 @@
     
     <mat-tab-group mat-align-tabs="center">
         <mat-tab label="Sign In">
-            <mat-form-field style=" margin-top: 20px;">
-                <mat-label>Email</mat-label>
-                <input matInput type="email">
-            </mat-form-field>
-            <br>
-            <mat-form-field>
-                <mat-label>Password</mat-label>
-                <input matInput type="password">
-            </mat-form-field>
-            <br>
-            <button mat-raised-button style="width: 80%; margin-left: 10%; margin-top: 20px;" color="primary">Sign In</button>
+            <form #loginForm="ngForm" (submit)="onSubmitLogin(loginForm)">
+                <mat-form-field style=" margin-top: 20px;">
+                    <mat-label>Email</mat-label>
+                    <input matInput type="email" name="loginEmail" ngModel required>
+                </mat-form-field>
+                <br>
+                <mat-form-field>
+                    <mat-label>Password</mat-label>
+                    <input matInput type="password"  name="loginPassword" ngModel required>
+                </mat-form-field>
+                <br>
+                <button 
+                    mat-raised-button 
+                    type="submit"
+                    style="width: 80%; margin-left: 10%; margin-top: 20px;" 
+                    color="primary"
+                >Sign In
+                </button>
+            </form>
         </mat-tab>
 
         <mat-tab label="Sign Up">
-            <mat-form-field style="margin-top: 20px;">
-                <mat-label>Email</mat-label>
-                <input matInput type="email">
-            </mat-form-field>
-            <br>
-            <mat-form-field>
-                <mat-label>Password</mat-label>
-                <input matInput type="password">
-            </mat-form-field>
-            <br>
-            <button mat-raised-button style="width: 80%; margin-left: 10%; margin-top: 20px;" color="primary">Sign Up</button>
+            <form #signupForm="ngForm" (submit)="onSubmitSignup(signupForm)">
+                <mat-form-field style="margin-top: 20px;">
+                    <mat-label>Email</mat-label>
+                    <input matInput type="email" name="signupEmail" ngModel required>
+                </mat-form-field>
+                <br>
+                <mat-form-field>
+                    <mat-label>Password</mat-label>
+                    <input matInput type="password" name="signupPassword" ngModel required>
+                </mat-form-field>
+                <br>
+                <button 
+                    mat-raised-button 
+                    type="submit"
+                    style="width: 80%; margin-left: 10%; margin-top: 20px;" 
+                    color="primary"
+                    >Sign Up
+                </button>
+            </form>
         </mat-tab>
     </mat-tab-group>
-
 </mat-card>
