--- a/src/app/components/user-information/user-information.component.html
+++ b/src/app/components/user-information/user-information.component.html
@@ -1,4 +1,5 @@
 <mat-card>
+    <h2 style="text-align: center;">User Information</h2>
     <form class="example-form" (submit)="onSubmitUserInfo(userinfoForm)" #userinfoForm="ngForm">      
 
         <mat-form-field class="example-full-width">
