--- a/src/app/components/incentives/incentives-list/incentives-list.component.html
+++ b/src/app/components/incentives/incentives-list/incentives-list.component.html
@@ -1,18 +1,18 @@
 <table class="styled-table">
     <thead>
         <tr>
-            <th>city_id</th>
-            <th>paid_fellowship</th>
-            <th>cash_payment</th>
-            <th>student_loans</th>
+            <th>State</th>
+            <th>City</th>
+            <th>Description</th>
+            <th>Requirements</th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let incentive of incentives">
-            <td>{{incentive.city_id}}</td>
-            <td>{{incentive.paid_fellowship}}</td>
-            <td>{{incentive.cash_payment}}</td>
-            <td>{{incentive.student_loans}}</td>
+            <td>{{incentive.State}}</td>
+            <td>{{incentive.City}}</td>
+            <td>{{incentive.description}}</td>
+            <td>{{incentive.requirements}}</td>
         </tr>
     </tbody>
 </table>
