--- a/src/app/components/user-information/user-information.component.html
+++ b/src/app/components/user-information/user-information.component.html
@@ -28,6 +28,7 @@
             <mat-hint align="end">{{postalCode.value.length}} / 5</mat-hint>
           </mat-form-field>
         </div>
+      <button mat-raised-button color="primary" style="margin-left: 30%; width: 40%;">Submit</button>
 
       </form>
 </mat-card>
