--- a/src/app/components/preference-form/preference-form.component.css
+++ b/src/app/components/preference-form/preference-form.component.css
@@ -17,3 +17,11 @@
     width: 50%;
     font-size: x-large;
   }
+
+  .h2-title {
+    margin-bottom: 40px; 
+    text-align: center; 
+    background-color: rgb(224, 229, 255); 
+    padding: 3%;
+  }
+  
