--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,15 @@
 <mat-toolbar> 
     <h2>CS411 - Relocation Finder</h2>
     <ul>
-        <a routerLink="/user"> Users </a>
-        <a routerLink="/city"> City </a>
+<!--        <a routerLink="/user"> Users </a> -->
+        <a routerLink="/zipcode"> Zipcodes </a>
+        <a routerLink="/census"> Census </a>
         <a routerLink="/housing"> Housing </a>
+        <a routerLink="/weather"> Weather </a>
         <a routerLink="/incentives"> Incentives </a>
-        <a routerLink="/prefers"> prefers </a>
+<!--        <a routerLink="/prefers"> prefers </a> -->
         <a routerLink="/preference"> preference </a>
-        <a routerLink="/user-info"> user-info </a>
-        <a routerLink="/login"> login </a>
+<!--        <a routerLink="/user-info"> user-info </a> -->
+<!--        <a routerLink="/login"> login </a> -->
     </ul> 
 </mat-toolbar>
