Changes to preference component and service to connect to backend (/preference/results). Cosmetic changes to other compoenents

--- a/src/app/components/census/census-list/census-list.component.css
+++ b/src/app/components/census/census-list/census-list.component.css
@@ -30,3 +30,13 @@
     font-weight: bold;
     color: #009879;
 }
+
+.styled-table td {
+    padding: 8px;
+    border: 2px solid grey;
+}
+
+.styled-table th {
+    padding: 8px;
+    border: 2px solid grey;
+}
