--- a/src/app/components/weather/weather-list/weather-list.component.html
+++ b/src/app/components/weather/weather-list/weather-list.component.html
@@ -1,8 +1,12 @@
+<mat-card style="text-align: center;">
+    <h2>Weather Data</h2>
+</mat-card>
+
 <table class="styled-table">
     <thead>
         <tr>
-            <th>city</th>
-            <th>state</th>
+            <th>City</th>
+            <th>State</th>
             <th>average high(f)</th>
             <th>average low(f)</th>
             <th>average high(c)</th>
