--- a/src/app/components/zipcodes/zipcode-list/zipcode-list.component.html
+++ b/src/app/components/zipcodes/zipcode-list/zipcode-list.component.html
@@ -1,3 +1,7 @@
+<mat-card style="text-align: center;">
+    <h2>Zip Codes</h2>
+</mat-card>
+
 <table class="styled-table">
     <thead>
         <tr>
