Added results page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,6 +9,7 @@
         <a routerLink="/incentives"> Incentives </a>
 <!--        <a routerLink="/prefers"> prefers </a> -->
         <a routerLink="/preference"> preference </a>
+        <a routerLink="/results"> results </a>
 <!--        <a routerLink="/user-info"> user-info </a> -->
 <!--        <a routerLink="/login"> login </a> -->
     </ul> 
