Deleted city related, color of header, width of all components, added more to results page, modified zipcodes service to related api changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   <app-header class="toolbar"></app-header>
 </div>
 
-<div style="margin-top: 100px;" class="center">
+<div style="margin-top: 100px;" class="full-width">
   <router-outlet></router-outlet>
 </div>
