--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,6 +31,14 @@
     align-items: center;
 }
 
+.full-width {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    left: 0;
+}
+
 footer {
     margin-top: 8px;
     display: flex;
