--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar> 
+<mat-toolbar color="primary"> 
     <h2>CS411 - Relocation Finder</h2>
     <ul>
 <!--        <a routerLink="/user"> Users </a> -->
