--- a/src/app/components/results/results-page/results-page.component.html
+++ b/src/app/components/results/results-page/results-page.component.html
@@ -1,20 +1,26 @@
-<div style="background-color: grey;">
-    <div style="display: flex;">
-        <mat-card>
-            <app-results-list></app-results-list>
-        </mat-card>
+<div class="full-width">
+    <mat-card style="text-align: center;">
+        <h2>Results</h2>
+    </mat-card>
+    
+    <div>
+        <div style="display: flex;">
+            <mat-card style="width: 40%;">
+                <h3>Results List</h3>
+                <app-results-list></app-results-list>
+            </mat-card>
+            
+            <mat-card style="width: 60%;">
+                <h3>Locations</h3>
+                <app-results-map></app-results-map>
+            </mat-card>
+        </div>
         
         <mat-card>
-            <div>
-                MAP
-            </div>
+            <h3>Details</h3>
+            <app-results-detail></app-results-detail>
         </mat-card>
     </div>
-    
-    <mat-card>
-        <div>
-            a
-        </div>
-    </mat-card>
 </div>
+
 
