--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,16 +1,11 @@
 <mat-toolbar color="primary"> 
-    <h2>CS411 - Relocation Finder</h2>
+    <a routerLink="/login"><h2>CS411 - Relocation Finder</h2></a>
     <ul>
 <!--        <a routerLink="/user"> Users </a> -->
-        <a routerLink="/zipcode"> Zipcodes </a>
-        <a routerLink="/census"> Census </a>
-        <a routerLink="/housing"> Housing </a>
-        <a routerLink="/weather"> Weather </a>
-        <a routerLink="/incentives"> Incentives </a>
 <!--        <a routerLink="/prefers"> prefers </a> -->
         <a routerLink="/preference"> preference </a>
         <a routerLink="/results"> results </a>
-<!--        <a routerLink="/user-info"> user-info </a> -->
-<!--        <a routerLink="/login"> login </a> -->
+        <a routerLink="/user-info"> user-info </a>
+        <a routerLink="/login"> login </a>
     </ul> 
 </mat-toolbar>
