--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -3,3 +3,27 @@ mat-form-field {
     margin-right: 10%;
     width: 80%;
 }
+
+.bg {
+    background-image: url("../../../assets/images/pexels-binyamin-mellish-186077.jpg");
+  
+    /* filter: blur(5px);
+    -webkit-filter: blur(5px); */
+
+    /* Full height */
+    height: 100vh;
+
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.bg-overlay {
+    text-align: center;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
