--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,9 @@
     background-color: #02C39A;
     background-color: #F0F3BD;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+  }
