Changes to login page and user service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
     <a routerLink="/housing" style="color: white;"> Housing </a>
     <a routerLink="/weather" style="color: white;"> Weather </a>
     <a routerLink="/incentives"  style="color: white;"> Incentives </a>
+    <a routerLink="/user" style="color: white;"> Users </a>
     <br>CS411 - Relocation Finder (2020)
   </div>
 </footer>
