--- a/src/app/components/authentication/login/login.component.css
+++ b/src/app/components/authentication/login/login.component.css
@@ -5,7 +5,7 @@ mat-form-field {
 }
 
 .bg {
-    background-image: url("../../../assets/images/pexels-binyamin-mellish-186077.jpg");
+    background-image: url("../../../../assets/images/pexels-binyamin-mellish-186077.jpg");
   
     /* filter: blur(5px);
     -webkit-filter: blur(5px); */
