--- a/src/app/components/authentication/login/login.component.html
+++ b/src/app/components/authentication/login/login.component.html
@@ -19,6 +19,7 @@
                             <mat-label>Password</mat-label>
                             <input matInput type="password" name="signupPassword" ngModel required>
                         </mat-form-field>
+                        <span style="color: grey;">Dont use real password. Not Secure!</span>
                         <br>
                         <button 
                             mat-raised-button 
@@ -41,13 +42,14 @@
                             <mat-label>Password</mat-label>
                             <input matInput type="password"  name="loginPassword" ngModel required>
                         </mat-form-field>
+                        <span style="color: grey;">Dont use real password. Not Secure!</span>
                         <br>
                         <button 
                             mat-raised-button 
                             type="submit"
                             style="width: 60%; margin-top: 20px;" 
                             color="primary"
-                        >Sign In
+                        >Login
                         </button>
                     </form>
                 </mat-tab>
@@ -60,6 +62,7 @@
                 (click)="onGuestClick()"
                 >Contiue as Guest
             </button>
+            <br>{{ user.email }}
         </mat-card>
     </div>
 </div>
