--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,12 @@
 <mat-toolbar color="primary"> 
-    <a routerLink="/login"><h2>CS411 - Relocation Finder</h2></a>
-    <ul>
-<!--        <a routerLink="/user"> Users </a> -->
-<!--        <a routerLink="/prefers"> prefers </a> -->
+    <div style="display: flex;width: 50%;">
+        <a routerLink="/login"><h2>CS411 - Relocation Finder</h2></a>
+    </div>
+    <div style="display: flex;width: 50%;">
+        <!-- <a routerLink="/prefers"> prefers </a> -->
         <a routerLink="/preference"> preference </a>
         <a routerLink="/results"> results </a>
         <a routerLink="/user-info"> user-info </a>
-        <a routerLink="/login"> login </a>
-    </ul> 
+        <a routerLink="/login"> Login/Logout </a>
+    </div>
 </mat-toolbar>
