--- a/src/app/components/user-information/user-information-create/user-information-create.component.html
+++ b/src/app/components/user-information/user-information-create/user-information-create.component.html
@@ -51,7 +51,5 @@
 
     </form>
   </mat-card>   
+  <app-user-information-list></app-user-information-list>
 </div>
-
-
-<!-- <app-user-information-list></app-user-information-list> -->
