--- a/src/app/components/results/results-page/results-page.component.html
+++ b/src/app/components/results/results-page/results-page.component.html
@@ -1,4 +1,4 @@
-<div class="full-width">
+<div style="margin-top: 80px;" class="full-width">
     <mat-card style="text-align: center;">
         <h2>Results</h2>
     </mat-card>
